--- a/skateOrDieStarterTemplate/main.css
+++ b/skateOrDieStarterTemplate/main.css
@@ -27,3 +27,12 @@
     display: block;
     margin: auto;
   }
+
+h5.modal-title {
+    margin: auto;
+    margin-left: 30%;
+}
+
+.modalFormWrapper {
+    padding: 2rem;
+}
